--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
                 <hr>
                 <h2>Cast</h2>
                 <ul class="row">
-                    <li> <input type="text" id="castList"> <button id="BtnCast">Add Cast</button></li>
+                    <li>
+                        <label for="castList"></label>
+                        <input type="text" id="castList">
+                        <button id="BtnCast">Add Cast</button>
+                    </li>
                     <li class="col"><a
                             href="https://www.google.com/search?client=opera-gx&q=Gal+Gadot&sourceid=opera&ie=UTF-8&oe=UTF-8">Gal
                             Gadot</a></li>
