--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                     Lord and the Cheetah, a villainess who possesses superhuman strength and agility.</p>
                 <hr>
                 <h2>Cast</h2>
-                <ul class="row">
+                <ul class="row" id="castList">
                     <li>
-                        <label for="castList"></label>
-                        <input type="text" id="castList">
+                        <label for="addCast">Cast Name</label>
+                        <input type="text" id="addCast">
                         <button id="BtnCast">Add Cast</button>
                     </li>
                     <li class="col"><a
