--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                 <h2>Cast</h2>
                 <ul class="row" id="castList">
                     <li>
-                        <label for="addCast">Cast Name</label>
-                        <input type="text" id="addCast">
+                        <input type="text" id="addCast"><label for="addCast">Cast Name</label>
                         <button id="BtnCast">Add Cast</button>
                     </li>
                     <li class="col"><a
