--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                     Lord and the Cheetah, a villainess who possesses superhuman strength and agility.</p>
                 <hr>
                 <h2>Cast</h2>
-                <ul class="row" id="castList">
+                <ul class="row">
                     <li>
-                        <input type="text" id="addCast"><label for="addCast">Cast Name</label>
+                        <label for="addCast"></label>
+                        <input type="text" id="addCast">
                         <button id="BtnCast">Add Cast</button>
                     </li>
-                    <li class="col"><a
-                            href="https://www.google.com/search?client=opera-gx&q=Gal+Gadot&sourceid=opera&ie=UTF-8&oe=UTF-8">Gal
+                    <li class="col"><a href="https://www.google.com/search?q=Castlist">Gal
                             Gadot</a></li>
                     <li class="col"><a
                             href="https://www.google.com/search?client=opera-gx&q=Chris+Pine&sourceid=opera&ie=UTF-8&oe=UTF-8">Chris
