--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     Lord and the Cheetah, a villainess who possesses superhuman strength and agility.</p>
                 <hr>
                 <h2>Cast</h2>
-                <ul class="row">
+                <ul class="row" id="cast-list">
                     <li>
                         <label for="addCast"></label>
                         <input type="text" id="addCast">
