--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <ul class="row" id="cast-list">
                     <li>
                         <label for="addCast"></label>
-                        <input type="text" id="addCast">
+                        <input type="text" class="form-control" id="addCast">
                         <button id="BtnCast">Add Cast</button>
                     </li>
                     <li class="col"><a href="https://www.google.com/search?q=Castlist">Gal
